--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@nuxtjs/supabase": "^2.0.1",
     "@pinia/nuxt": "^0.11.3",
+    "@tailwindcss/vite": "^4.1.17",
     "marked": "^17.0.1",
     "nuxt": "^4.2.1",
     "pinia": "^3.0.4",
+    "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
     "vanta": "^0.5.24",
     "vue": "^3.5.25",
@@ -22,7 +24,6 @@
     "zod": "^4.1.13"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
     "@types/three": "^0.181.0",
     "sass-embedded": "^1.93.2"
   }
